--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Clock of Shame",
-  "description": "Did you really need to check Facebook so soon?",
+  "description": "You have wasted a lot of time on Facebook and u should be ashamed",
   "version": "1.0",
 
   "permissions": [
